k8s/umami/pg-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-app
spec:
  selector:
    matchLabels:
      app: myraid-flow
      type: postgres-database
  template:
    metadata:
      labels:
        app: myraid-flow
        type: postgres-database
    spec:
      containers:
        - name: postgres-app
          image: postgres:12-alpine
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: postgres-pv-storage
            - mountPath: "/docker-entrypoint-initdb.d/"
              name: postgres-schema-storage
              readOnly: true

      volumes:
        - name: postgres-pv-storage
          persistentVolumeClaim:
            claimName: umami-postgres-pv-claim
        - name: postgres-schema-storage
          configMap:
            name: umami-schema-config-map
            items:
              - key: "schema.postgresql.sql"
                path: "schema.postgresql.sql"
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
spec:
  selector:
    type: postgres-database
  ports:
    - port: 5432
      targetPort: 5432
