k8s/umami/umami-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami
spec:
  selector:
    matchLabels:
      app: umami
  template:
    metadata:
      labels:
        app: umami
    spec:
      containers:
        - name: umami
          image: ghcr.io/mikecao/umami:postgresql-latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: umami-service
spec:
  type: NodePort
  selector:
    app: umami
  ports:
    - port: 3000
      targetPort: 3000
