k8s/umami/umami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: umami-ingress
  labels:
    type: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    alb.ingress.kubernetes.io/group.name: lazarous-alb
spec:
  tls:
    - hosts:
        - umami.lazarus.network
      secretName: umami.lazarus.network
  rules:
    - host: umami.lazarus.network
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: umami-service
                port:
                  number: 3000
